<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#212121"
    android:orientation="vertical"
    tools:context=".Login"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="1000dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
        android:id="@+id/signInWelcom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="23dp"
        android:text="Welcome Back!"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/signInUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="Phone No"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/regEditUserName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:cursorVisible="false"
        android:inputType="number"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/signInPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:text="Password"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/signInRegText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="Not yet registered? Click"
        android:textColor="#FFFFFF"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/signInRegLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text=" here"
        android:textColor="#25A6B5"
        android:textSize="13sp" />

    <Button
        android:id="@+id/signInForwardButton"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="Signin"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp" />
    </LinearLayout>

</RelativeLayout>
